@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<html xmlns:th="http://www.thymeleaf.org">
+
+  <head>
+    <title>HTML Template Reader Test</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/test.css" th:href="@{/css/test.css}"/>
+  </head>
+
+  <body>
+    <h1>Testing!</h1>
+  </body>
+</html>
